--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <title>Exerices git</title>
 </head>
 <body>
-    Hello56
+    Coucou
     <div class="afficher">
         <div class="enfant"></div>
     </div>
 </body>
 </html>
-ezzzeezeze
