resolve #1, C'est résolu

--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
     <div class="afficher">
         <div class="enfant"></div>
     </div>
+    <div class="parent">
+        <div class="enfant">
+            <span class="test">resolve</span>
+        </div>
+    </div>
 </body>
 </html>
