--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     <div class="parent">
         <div class="enfant">
-            <span class="test">resolve</span>
+            <span class="test">resolve2</span>
         </div>
     </div>
 </body>
